--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,10 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.my-actionsheet{
+    --background: #4c8dff;
+    --color: #ffffff;
+    --background-selected:  #0cd1e8;
+    --background-activated: #0cd1e8;
+}
