--- a/src/app/dimmo-conseil/inscrits/inscrit-details-modal/inscrit-details-modal.component.html
+++ b/src/app/dimmo-conseil/inscrits/inscrit-details-modal/inscrit-details-modal.component.html
@@ -12,6 +12,6 @@
     </ion-toolbar>
   </ion-header>
 
-  <div *ngFor="let item of choix1.choix">
+  <!-- <div *ngFor="let item of choix1.choix">
       <p>{{item.titrePost}}</p>
-  </div>
+  </div> -->
