--- a/src/app/dimmo-conseil/inscrits/inscrit-item/inscrit-item.component.html
+++ b/src/app/dimmo-conseil/inscrits/inscrit-item/inscrit-item.component.html
@@ -4,17 +4,15 @@
         <img src="./assets/icon/avatar.png">
     </ion-avatar>
   </ion-thumbnail>
-  <ion-label>
+  <!-- <ion-label>
     <h1 (click)="onOpenModalDetailsChoix()">{{ users.firstName }} {{ users.lastName }}</h1>
     <div class="offer-details">
-      <!-- <ion-icon name="calendar" color="primary"></ion-icon> -->
       TEL:
       <ion-text style="font-weight: bold;" color="danger" class="space-left">{{users.phone}}
       </ion-text> &nbsp;
       <span class="space-left">choix :</span>
-      <!-- <ion-icon name="calendar" class="space-left" color="primary"></ion-icon> -->
       <ion-text color="danger" class="space-left">3
       </ion-text>
     </div>
-  </ion-label>
+  </ion-label> -->
 </ion-item>
