--- a/src/app/dimmo-conseil/inscrits/inscrits.component.html
+++ b/src/app/dimmo-conseil/inscrits/inscrits.component.html
@@ -16,16 +16,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
-        <!-- <div *ngIf="isLoading" text-center>
-          <ion-spinner color="primary"></ion-spinner>
-        </div> -->
-        <!-- <div text-center *ngIf="!isLoading">
-          <p>Pas de choix pour l'instant! Merci de faire vos choix!</p>
-          <ion-button color="primary" routerLink="/dimmo-conseil/tabs/audio/new"
-            >Offer New Place</ion-button
-          >
-        </div> -->
-        <ion-list *ngIf="isLoading">
+        <!-- <ion-list *ngIf="isLoading">
           <ion-item-sliding *ngFor="let users of users" #slidingItem>
             <app-inscrit-item [users]="users"></app-inscrit-item>
             <ion-item-options side="end">
@@ -37,7 +28,7 @@
               </ion-item-option>
             </ion-item-options>
           </ion-item-sliding>
-        </ion-list>
+        </ion-list> -->
       </ion-col>
     </ion-row>
   </ion-grid>
