--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -28,7 +28,7 @@
             >Offer New Place</ion-button
           >
         </div> -->
-        <ion-list *ngIf="isLoading">
+        <!-- <ion-list *ngIf="isLoading">
           <ion-item-sliding *ngFor="let choix of choix" #slidingItem>
             <app-inscrit-item [choix]="choix"></app-inscrit-item>
             <ion-item-options side="end">
@@ -40,7 +40,7 @@
               </ion-item-option>
             </ion-item-options>
           </ion-item-sliding>
-        </ion-list>
+        </ion-list> -->
       </ion-col>
     </ion-row>
   </ion-grid>
