--- a/src/app/dimmo-conseil/audio/new-choix/new-choix.component.html
+++ b/src/app/dimmo-conseil/audio/new-choix/new-choix.component.html
@@ -365,7 +365,7 @@
   </ion-header>
 
 <form  [formGroup]="secondFormGroup" [formGroup]="thirdFormGroup" [formGroup]="quatriemeFormGroup" >
-<mat-vertical-stepper [linear]="isLinear" #stepper>
+<mat-vertical-stepper  #stepper>
   <mat-step [stepControl]="firstFormGroup">
     <form [formGroup]="firstFormGroup">
       <ng-template matStepLabel>LE POSTE SOUHAITE</ng-template>
